2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp31/task1.c: Fixed spacing.

2009-12-08	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp18/init.c, sp31/task1.c, sp43/init.c, sp63/init.c, sp64/init.c,
	spfatal10/testcase.h, spfatal11/testcase.h, spobjgetnext/init.c,
	spwkspace/init.c: Use rtems_test_assert() consistently instead of
	system assert(). rtems_test_assert() is designed to integrate into
	the RTEMS test suite infrastructure.

2009-12-04	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* sp31/sp31.scn, sp31/task1.c, spintrcritical17/init.c: New test
	cases. Updated copyright notice.

2009-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sp25/task1.c: Use PRIuPTR for segment_sizes.

2009-11-30	Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* sp68/Makefile.in, sp68/.cvsignore,
	* spintrcritical17/Makefile.in, spintrcritical17/.cvsignore:
	removed unneeded Makefile.in, added cvsignore
	
2009-11-30	Sebastian Huber <Sebastian.Huber@embedded-brains.de>

	* sp68/init.c, sp68/Makefile.am, sp68/sp68.doc, sp68/sp68.scn,
	spintrcritical17/init.c, spintrcritical17/Makefile.am,
	spintrcritical17/spintrcritical17.doc,
	spintrcritical17/spintrcritical17.scn: New files.
	* Makefile.am, configure.ac: Update for test sp68 and spintrcritical17.
	* sp31/task1.c, sp67/init.c: Changes for new timer server
	implementation.
	* sp52/init.c: The init task must be preemptible to let the timer
	server run.

2009-11-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	PR 1460/cpukit
	* sp43/init.c: Change return type on methods accessing portions of
	RTEMS Ids to int. This allows -1 to be return on error.

2009-11-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* spsize/Makefile.am: Fix broken install rule.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spprintk/spprintk.scn: Add end of line at end of file.

2009-11-09	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sp32/Makefile.am, sp33/Makefile.am, sp37/Makefile.am,