@@ -1,0 +1,7 @@
+*** TEST 69 ***
+rtems_rate_monotonic_get_status - verify values of an inactive period
+rtems_rate_monotonic_get_status - check RTEMS_NOT_DEFINED
+rtems_rate_monotonic_get_status - verify values of an active period
+wall time should be ~600000000 is 609216000
+cpu time should be ~100000000 is 109217000
+*** END OF TEST 69 ***
